# pr_demon

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: bitbucket.rs  fanout.rs  goo_gl.rs  json_dictionary.rs  main.rs  rest.rs  teamcity.rs  telegram.rs  transformer.rs  websocket.rs
tests/fixtures/: config.json  config.yaml
