[package]
name = "pr_demon"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[[bin]]
name = "pr_demon"
test = true

[dependencies]
chrono = "0.3"
cron = "0.0.2"
docopt = "0.7.0"
fern = "0.3"
fusionner = { git = "https://github.com/lawliet89/fusionner", rev = "9adb664cfb299d3402b62b2608cb724c93baa6e0" }
git2 = { git = "https://github.com/alexcrichton/git2-rs.git", rev = "0d745cf0efad95a9e407beecd7b508ca9a37df80" }
hyper = "0.10"
log = "0.3"
reqwest = "0.5"
rustc-serialize = "0.3"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_yaml = "0.7"
time = "0.1"
url = "1.0"
ws = "0.7.1"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
timebomb = "0.1"
url = "1.0"
