[package]
name = "pr_demon"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[[bin]]
name = "pr_demon"
path = "src/main.rs"
test = true

[dependencies]
docopt = "0.7.0"
fern = "0.3"
fusionner = { git = "https://github.com/lawliet89/fusionner", rev = "f854484adc0635a21cddda183a7bb64118490547" }
git2 = "0.6.6"
hyper = "0.10"
log = "0.3"
reqwest = "0.6.2"
rustc-serialize = "0.3"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
serde_yaml = "0.7"
time = "0.1"
url = "1.0"
ws = "0.7.1"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
timebomb = "0.1"
url = "1.0"
